@@ -3,7 +3,7 @@
 %publishers
 @string{AP="Academic Press"}
 @string{CUP="Cambridge University Press"}
-@string{IEEE="{\sc ieee} Computer Society Press"}
+@string{IEEE="IEEE Computer Society Press"}
 @string{LNCS="Lecture Notes in Computer Science"}
 @string{MIT="MIT Press"}
 @string{NH="North-Holland"}
